added dynamic meta on pages

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "Careers" %>
+<% content_for :meta_description, "#{t('jobs.tagline')}" %>
+
 <div class="jobs-wrapper">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "jobs-big-pill hide-mobile") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", class: "jobs-little-pill hide-mobile") %>
