--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "About" %>
+
 <div class="about-wrapper">
   <div class="first-section fxone-first-section-background">
     <div class="first-section-text">
