--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{t('contact.contact_title')}" %>
+<% content_for :meta_description, "#{t('contact.contact_title_description')}" %>
+
 <div class="contact">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "contact-pill") %>
   <div class="container">
