--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{t('distributor.first_section_title')}" %>
+<% content_for :meta_description, "#{t('distributor.first_section_text')}" %>
+
 <div class="distributor-wrapper">
   <div class="first-section fxone-first-section-background mobile-column">
       <div class="first-section-text">
