--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "#{t('faq.title')}" %>
+
 <div class="faq-page">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "faq-pill") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "faq-pill-bottom") %>
