--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "FX ONE #{t('fxone_remote.first_section_title')}" %>
+<% content_for :meta_description, "#{t('fxone_remote.first_section_text')}" %>
+<% content_for :meta_image, cl_image_path("fxone-remote-graphic-1_rq5ho4.png", width: 400) %>
+
 <div class="fxone-wrapper">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-little-pill") %>
