--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "INK CATRIDGE" %>
+<% content_for :meta_description, "#{t('inks_and_consumables.first_section_text')}" %>
+<% content_for :meta_image, cl_image_path("inks-and-cons_wzglxn", width: 400) %>
+
 <div class="inks-wrapper">
   <div class="first-section fxone-first-section-background">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "inks-big-pill") %>
