--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "#{t('software.first_section_title_one')} | #{t('software.first_section_title_two')}" %>
+<% content_for :meta_description, "#{t('software.first_section_text_two')}" %>
+<% content_for :meta_image, cl_image_path("software-graphic-1_ayt9zv", width: 400) %>
+
 <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "software-big-pill") %>
 <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "software-little-pill hide-mobile") %>
 <div class="software-wrapper">
