--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "#{t('cost_of_ownership.first_section_title')} FX ONE" %>
+<% content_for :meta_description, "#{t('cost_of_ownership.first_section_text')}" %>
+<% content_for :meta_image, cl_image_path("Piggy_1_al3kec", width: 400) %>
+
 <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "ownership-big-pill hide-mobile") %>
 <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "ownership-little-pill") %>
 <div class="ownership-wrapper">
