--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "FX ONE #{t('fxone_plus.first_section_title')}" %>
+<% content_for :meta_description, "#{t('fxone_plus.first_section_text')}" %>
+<% content_for :meta_image, cl_image_path("fxone-plus_fvkcao.png.png", width: 400) %>
+
 <div class="fxone-wrapper fxone-plus">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
   <div class="first-section fxone-first-section-background">
