small fixes on cards

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -143,6 +143,7 @@
   width: 60px !important;
   border-radius: 5px !important;
   margin: 16px !important;
+  margin-bottom: 0 !important;
 }
 
 .body-text {
