--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,8 +18,8 @@
         </div>
         <div class="about-second-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
-          <h3><%= t("about.second_section_title") %></h3>
-          <p class="paragraph-text about-second-section-text"><%= t("about.second_section_text") %></p>
+          <h2><%= t("about.second_section_title") %></h2>
+          <p class="responsive-text about-second-section-text"><%= t("about.second_section_text") %></p>
         </div>
       </div>
     </div>
@@ -28,8 +28,8 @@
     <div class="container">
       <div class="about-third-section-text" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'about-icon-2.png', class: 'about-icon' %>
-        <h3 class="text-center"><%= t("about.third_section_title") %></h3>
-        <p class="paragraph-text text-center"><%= t("about.third_section_text") %></p>
+        <h2 class="text-center"><%= t("about.third_section_title") %></h2>
+        <p class="responsive-text text-center"><%= t("about.third_section_text") %></p>
       </div>
     </div>
   </div>
@@ -40,11 +40,11 @@
     <div class="container">
       <div class="about-fourth">
         <div class="about-fourth-text-left">
-          <p class="paragraph-text"><%= t("about.fourth_section_text_left") %></p>
+          <p class="responsive-text"><%= t("about.fourth_section_text_left") %></p>
         </div>
         <div class="middle-break" style="height: 100%; border-left: 1px solid black;"></div>
         <div class="about-fourth-text-right">
-          <p class="paragraph-text"><%= t("about.fourth_section_text_right") %></p>
+          <p class="responsive-text"><%= t("about.fourth_section_text_right") %></p>
         </div>
       </div>
     </div>
@@ -58,10 +58,10 @@
           </div>
           <div class="about-fifth-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
             <%= image_tag 'about-icon-3.png', class: 'about-icon' %>
-            <h3 class="about-fifth-section-text"><%= t("about.fifth_section_title") %></h3>
+            <h2 class="about-fifth-section-text"><%= t("about.fifth_section_title") %></h2>
             <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "about-graphic about-graphic-two show-mobile") %>
-            <p class="paragraph-text about-fifth-section-text"><%= t("about.fifth_section_text_one") %></p>
-            <p class="paragraph-text about-fifth-section-text"><%= t("about.fifth_section_text_two") %></p>
+            <p class="responsive-text about-fifth-section-text"><%= t("about.fifth_section_text_one") %></p>
+            <p class="responsive-text about-fifth-section-text"><%= t("about.fifth_section_text_two") %></p>
           </div>
         </div>
       </div>
