--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -3,7 +3,7 @@
 <% content_for :meta_image, cl_image_path("fxone-standard-graphic-1_wieclv.png", width: 400) %>
 
 <div class="fxone-wrapper fxone-standard">
-  <div class="first-section fxone-first-section-background">
+  <div class="first-section fxone-first-section-background fxone-standard-back">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
     <div class="first-section-text">
       <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_standard.first_section_title") %></h1>
@@ -11,8 +11,8 @@
     </div>
     <%= cl_image_tag("fxone-standard-graphic-1_wieclv.png", :quality=>"auto", class: "first-section-image") %>
   </div>
-  <div class="ownership-second-section-wrapper fxone-second-section-wrapper" >
-    <%= image_tag 'square-dots.png', class: 'fxone-dots hide-mobile' %>
+  <div class="ownership-second-section-wrapper fxone-second-section-wrapper" style="padding-top: 15vh;">
+    <%= image_tag 'square-dots.png', class: 'fxone-dots fxone-stand-dots hide-mobile' %>
     <div data-aos="fade-up" data-aos-duration="2000">
       <%= image_tag 'fxone-icon-1.png', class: 'about-icon' %>
     </div>
