--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -14,7 +14,9 @@
     padding-top: 140px;
   }
 }
-
+.whitebg {
+  background-color: white !important;
+}
 .fxone-second-section-wrapper {
   position: relative;
 }
