--- a/app/assets/stylesheets/pages/_fxone_plus.scss
+++ b/app/assets/stylesheets/pages/_fxone_plus.scss
@@ -17,6 +17,10 @@
   position: relative;
 }
 
+.fxone-plus-sect {
+  overflow: hidden;
+}
+
 .fxone-plus-dots {
   width: 160px;
   position: absolute;
