--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -24,6 +24,14 @@
             <%= link_to t('navbar.careers'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
             <%= link_to t('navbar.news'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
+          <% if policy(Post).new? %>
+            <div class="footer-section">
+              <p class="footer-title">Admin</p>
+              <%= link_to "New post", new_admin_post_path, class: "light-grey footer-link s-medium-text mb-2" %>
+              <%= link_to "New country", new_admin_country_path, class: "light-grey footer-link s-medium-text mb-2" %>
+              <%= link_to "New Job", new_admin_job_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            </div>
+          <% end %>
         </div>
         <p class="trademark trademark-web">© Foenix Coding</p>
       </div>
@@ -57,3 +65,4 @@
     </div>
   </div>
 </div>
+
