--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.input :text, as: :text %>
       <%= f.input :image %>
       <%= f.input :image_cache, as: :hidden %>
-      <%= f.input :featured %>
+      <%= f.input :featured, as: :boolean %>
       <%= f.button :submit, class: 'crud-button' %>
     <% end %>
   </div>
