--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -4,6 +4,7 @@
   <input id="x" type="hidden" name="post[text]" value= "<%= @post.text ? @post.text : '' %>">
   <trix-editor input="x"></trix-editor>
   <%= f.input :photo, as: :file %>
+  <%= f.input :featured, as: :boolean %>
   <%= f.input :time %>
   <%= f.submit %>
 <% end %>
