--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -86,8 +86,9 @@
       </div>
     </div>
   <div class="third-section">
-    <%= cl_image_tag("foenix-home-background_wziieq.png", :quality=>"auto", class: "third-section_svg") %>
     <div class="third-section-features">
+      <%= cl_image_tag("home-slant-1_mc6ddl.png", class: "home-slant-1") %>
+      <%= cl_image_tag("home-slant-2_ecof1k.png", class: "home-slant-2") %>
       <div class="third-section-content" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'home-icon-2.png', class: 'about-icon' %>
         <h2><%= t("home.tabs_title") %></h2>
@@ -112,7 +113,7 @@
         </div>
       </div>
       <div class="tabs-area">
-        <%= cl_image_tag("long-pill_xrmujn.png", :quality=>"auto") %>
+        <%= cl_image_tag("long-pill_xrmujn.png", class: 'tabs-pill') %>
         <div id="London" class="city" style="display: flex;">
           <div class="tab-text" >
             <h4><%= t("home.tabs_one_title") %></h4>
@@ -216,8 +217,7 @@
         </div>
       </div>
       <div class="third-section-video">
-        <%= cl_image_tag("blues-pill_lf4fan.png", :quality=>"auto", class: "tvid_img_1") %>
-        <%= cl_image_tag("slice-pill_bfxclr.png", :quality=>"auto", class: "tvid_img_2") %>
+        <%= cl_image_tag("home-outline-pill-2_yk18fu.png", :quality=>"auto", class: "home-outline-pill-2") %>
         <%= cl_image_tag("dots-dots_mwj7rq.png", :quality=>"auto", class: "tvid_img_3") %>
         <div class="third-section-media" data-aos="fade-right" data-aos-duration="2000">
           <div class="third-section-media-lhs">
