--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :title %>
   <p>Text</p>
   <input id="x" type="hidden" name="post[text]" value= "<%= @post.text ? @post.text : '' %>">
-  <trix-editor input="x"></trix-editor>
+  <trix-editor class="trix-content" input="x"></trix-editor>
   <%= f.input :photo, as: :file %>
   <%= f.input :featured, as: :boolean %>
   <%= f.input :time %>
