added copy of mets data/ESO

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "Careers" %>
-<% content_for :meta_description, "#{t('jobs.tagline')}" %>
+<% content_for :meta_title, "#{t('seo.jobs.title')}" %>
+<% content_for :meta_description, "#{t('seo.jobs.description')}" %>
 
 <div class="jobs-wrapper">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "jobs-big-pill hide-mobile") %>
