--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,4 +1,5 @@
-<% content_for :meta_title, "#{t('faq.title')}" %>
+<% content_for :meta_title, "#{t('seo.faq.title')}" %>
+<% content_for :meta_description, "#{t('seo.faq.description')}" %>
 
 <div class="faq-page">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "faq-pill") %>
