--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "FX ONE #{t('fxone_plus.first_section_title')}" %>
-<% content_for :meta_description, "#{t('fxone_plus.first_section_text')}" %>
+<% content_for :meta_title, "#{t('seo.fxone_plus.title')}" %>
+<% content_for :meta_description, "#{t('seo.fxone_plus.description')}" %>
 <% content_for :meta_image, cl_image_path("fxone-plus_fvkcao.png.png", width: 400) %>
 
 <div class="fxone-wrapper fxone-plus">
