--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "INK CATRIDGE" %>
-<% content_for :meta_description, "#{t('inks_and_consumables.first_section_text')}" %>
+<% content_for :meta_title, "#{t('seo.inks_and_consumables.title')}" %>
+<% content_for :meta_description, "#{t('seo.inks_and_consumables.description')}" %>
 <% content_for :meta_image, cl_image_path("inks-and-cons_wzglxn", width: 400) %>
 
 <div class="inks-wrapper">
