--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
-<% content_for :meta_title, "News/Events" %>
+<% content_for :meta_title, "#{t('seo.posts.title')}" %>
+<% content_for :meta_description, "#{t('seo.posts.description')}" %>
 
 <div class="posts">
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "news-pill") %>
