--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
-<% content_for :meta_title, "About" %>
+<% content_for :meta_title, "#{t('seo.about.title')}" %>
+<% content_for :meta_description, "#{t('seo.about.description')}" %>
 
 <div class="about-wrapper">
   <div class="first-section fxone-first-section-background">
