--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "#{t('distributor.first_section_title')}" %>
-<% content_for :meta_description, "#{t('distributor.first_section_text')}" %>
+<% content_for :meta_title, "#{t('seo.distributors.title')}" %>
+<% content_for :meta_description, "#{t('seo.distributors.description')}" %>
 
 <div class="distributor-wrapper">
   <div class="first-section fxone-first-section-background mobile-column">
