--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "FX ONE #{t('fxone_remote.first_section_title')}" %>
-<% content_for :meta_description, "#{t('fxone_remote.first_section_text')}" %>
+<% content_for :meta_title, "#{t('seo.fxone_remote.title')}" %>
+<% content_for :meta_description, "#{t('seo.fxone_standard.description')}" %>
 <% content_for :meta_image, cl_image_path("fxone-remote-graphic-1_rq5ho4.png", width: 400) %>
 
 <div class="fxone-wrapper">
