--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "FX ONE #{t('fxone_standard.first_section_title')}" %>
-<% content_for :meta_description, "#{t('fxone_standard.first_section_text')}" %>
+<% content_for :meta_title, "#{t('seo.fxone_standard.title')}" %>
+<% content_for :meta_description, "#{t('seo.fxone_standard.description')}" %>
 <% content_for :meta_image, cl_image_path("fxone-standard-graphic-1_wieclv.png", width: 400) %>
 
 <div class="fxone-wrapper fxone-standard">
