--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,5 @@
-<!-- <div class="container">
-  <% if current_user %>
-  <p><%#= link_to "Countries", admin_countries_path %></p>
-  <p><%#= link_to "Posts", posts_path %></p>
-  <p><%#= link_to "Jobs", jobs_path %></p>
-  <% end %>
-</div>
- -->
+<% content_for :meta_title, "#{t('seo.home_page.title')}" %>
+<% content_for :meta_description, "#{t('seo.home_page.description')}" %>
 <div class="home">
   <div class="first-section">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg") %>
