removed trix lines

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1004,6 +1004,10 @@
   }
 }
 
+.tabs-pill {
+  width: 1200px !important;
+}
+
 .cookie-bar-content {
   box-shadow: 0 0 30px rgba(0,0,0,0.3);
   position: relative;
