--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1004,9 +1004,17 @@
   }
 }
 
-.tabs-pill {
-  width: 1200px !important;
-}
+// .tabs-pill {
+//   width: 1300px !important;
+//   top: -530px !important;
+//   right: -860px !important;
+//   @media (max-width: 1100px) and (min-width: 1000px) {
+//     width: 450px;
+//   }
+//   @media (max-width: 1200px) and (min-width: 1100px) {
+//     width: 550px;
+//   }
+// }
 
 .cookie-bar-content {
   box-shadow: 0 0 30px rgba(0,0,0,0.3);
