--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -124,10 +124,10 @@
       </div>
       <div class="about-section fxone-section mobile-column">
         <div class="about-first-section-left no-padding-mobile">
-          <%= cl_image_tag("fxone-remote-graphic-3_npzsvy.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("remote-lhs_cgc3ai.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
         <div class="about-first-section-right no-padding-mobile">
-          <%= cl_image_tag("fxone-remote-graphic-4_tinbue.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("remote-rhs_bawclk.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
       </div>
     </div>
