--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -127,10 +127,10 @@
       </div>
       <div class="about-section fxone-section">
         <div class="about-first-section-left">
-          <%= cl_image_tag("fxone-remote-graphic-3_npzsvy.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("standard-lhs_av4iam.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
         <div class="about-first-section-right">
-          <%= cl_image_tag("fxone-remote-graphic-4_tinbue.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("standard-rhs_gakqh2.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
       </div>
     </div>
