--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -20,14 +20,14 @@
       <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile") %>
     </div>
   </div>
-  <div class="software-second-section-wrapper">
+  <div class="software-second-section-wrapper" style="padding-top: 0px;">
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "software-cards-little-pill show-mobile") %>
     <div class="container">
       <div class="inks-section software-section">
         <div class="inks-first-section-left software-first-section-left software-check-display">
           <div>
             <h2><%= t("software.second_section_title") %></h2>
-            <p class="responsive-text-small"><%= t("software.second_section_text") %></p></p>
+            <p class="responsive-text-small" style="width: 70%"><%= t("software.second_section_text") %></p></p>
           </div>
           <div>
             <div class="fxone-sixth-section-check">
