--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,20 +9,20 @@
           <div class="footer-section">
             <p class="footer-title"><%= t('navbar.products') %></p>
             <%= link_to t('navbar.printers'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.software'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.inks'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.software'), software_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.inks'), inks_and_consumables_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
           <div class="footer-section">
             <p class="footer-title"><%= t('navbar.services') %></p>
-            <%= link_to t('navbar.distributors'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.cost'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.faq'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.distributors'), distributor_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.cost'), cost_of_ownership_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.faq'), faq_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
           <div class="footer-section">
             <p class="footer-title"><%= t('navbar.company') %></p>
-            <%= link_to t('navbar.about'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.careers'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
-            <%= link_to t('navbar.news'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.about'), about_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.careers'), jobs_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.news'), posts_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
           <% if policy(Post).new? %>
             <div class="footer-section">
