--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,10 +12,9 @@
     <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "about-big-pill") %>
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill") %>
     <div class="container">
-      <div class="about-section mobile-column">
+      <div class="about-section mobile-column" style="padding-top: 0px;">
         <div class="about-second-section-left no-padding-mobile">
           <%= cl_image_tag("about-graphic-2_gcrekd.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
-          <%= image_tag 'square-dots.png', class: 'about-dots-section-two' %>
         </div>
         <div class="about-second-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
