--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -2,57 +2,55 @@
 <% content_for :meta_description, "#{t('software.first_section_text_two')}" %>
 <% content_for :meta_image, cl_image_path("software-graphic-1_ayt9zv", width: 400) %>
 
-<%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "software-big-pill") %>
-<%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "software-little-pill hide-mobile") %>
 <div class="software-wrapper">
+  <%= cl_image_tag("bigpill_dhcpkm.png", :quality=>"auto", class: "software-big-pill") %>
+  <%= cl_image_tag("littlepill_nmf0vp.png", :quality=>"auto", class: "software-little-pill") %>
   <div class="first-section fxone-first-section-background">
-      <div class="first-section-text software-first-section-text">
-        <div class="software-first-title">
-          <h1><%= t("software.first_section_title_one") %></h1>
-          <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %></p>
-        </div>
-        <%= cl_image_tag("software-graphic-1_ayt9zv.png", class: "first-section-image show-mobile software-graphic-mobile") %>
-        <div>
-          <h1><%= t("software.first_section_title_two") %></h1>
-          <p class="responsive-text-small p-0"><%= t("software.first_section_text_two") %></p>
-        </div>
+    <div class="first-section-text software-first-section-text">
+      <div class="software-first-title">
+        <h1><%= t("software.first_section_title_one") %></h1>
+        <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %></p>
       </div>
-      <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile") %>
+      <div>
+        <h1><%= t("software.first_section_title_two") %></h1>
+        <p class="responsive-text-small p-0"><%= t("software.first_section_text_two") %></p>
+      </div>
     </div>
+    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image show-mobile software-graphic-mobile") %>
+    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile") %>
   </div>
   <div class="software-second-section-wrapper" style="padding-top: 0px;">
-    <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "software-cards-little-pill show-mobile") %>
     <div class="container">
       <div class="inks-section software-section">
         <div class="inks-first-section-left software-first-section-left software-check-display">
           <div>
             <h2><%= t("software.second_section_title") %></h2>
-            <p class="responsive-text-small" style="width: 70%"><%= t("software.second_section_text") %></p></p>
+            <p class="responsive-text-small" style="width: 70%"><%= t("software.second_section_text") %><br><%= t("software.second_section_text2") %></p>
           </div>
           <div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_one") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_one") %></p>
             </div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_two") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_two") %></p>
             </div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_three") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_three") %></p>
             </div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_four") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_four") %></p>
             </div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_five") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_five") %></p>
             </div>
             <div class="fxone-sixth-section-check">
-              <%= image_tag 'foenix-check.png', width: 20 %>
-              <p class="responsive-text-small" style="line-height: 30px !important; margin: 0;"><%= t("software.second_section_check_six") %></p>
+              <%= image_tag 'foenix-check.png', width: 30 %>
+              <p class="responsive-text-small" style="line-height: 30px !important;"><%= t("software.second_section_check_six") %></p>
             </div>
           </div>
         </div>
@@ -93,48 +91,49 @@
     <%= cl_image_tag("software-slant_p9xw4z.png", :quality=>"auto", class: "software-slant hide-mobile") %>
     <%= cl_image_tag("software-mobile-slant_giq09v.png", :quality=>"auto", class: "software-slant show-mobile") %>
     <div class="container">
-      <%= cl_image_tag("software-graphic-2_tqdjup.png", :quality=>"auto", class: "software-graphic-2 hide-mobile") %>
-      <%= cl_image_tag("software-mobile-graphic_dalrrz.png", :quality=>"auto", class: "software-graphic-2 show-mobile") %>
-      <%= cl_image_tag("software-mobile-graphic-2_wpjolo.png", :quality=>"auto", class: "software-graphic-2 show-mobile software-graphic-side") %>
-      <div class="fxone-fifth-section-content software-fifth-section-content">
-          <div class="fxone-fifth-section-left">
-            <h2><%= t("software.third_section_left_title") %></h2>
-            <p class="bold s-medium-text"><%= t("software.third_section_left_sub_title") %></p>
+      <%= cl_image_tag("software-whole_uv3nvo.png", :quality=>"auto", class: "software-graphic-2 hide-mobile") %>
+      <%= cl_image_tag("software-lhs_qbvtzk.png", :quality=>"auto", class: "software-graphic-2 show-mobile") %>
+      <%= cl_image_tag("software-rhs_k89feh.png", :quality=>"auto", class: "software-graphic-2 show-mobile software-graphic-side") %>
+      <div class="fxone-fifth-section-content software-fifth-section-content" style="width: 100%; margin: 0px; padding: 64px 10px;">
+          <%= cl_image_tag("dots-dots_mwj7rq.png", :quality=>"auto", class: "software-cards-little-pill") %>
+          <div class="fxone-fifth-section-left" style="padding: 0px 40px;">
+            <h2 style="margin-bottom: 25px;"><%= t("software.third_section_left_title") %></h2>
+            <p class="bold one-rem-text"><%= t("software.third_section_left_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_one") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_two") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_three") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_four") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_five") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_six") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_seven") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_left_text_eight") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_one") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_two") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_three") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_four") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_five") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_six") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_seven") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_left_text_eight") %></li>
             </ul>
-            <p class="s-medium-text grey-text pl-3" style="font-size: 12px !important; line-height: 18px !important;"><%= t("software.third_section_left_text_nine") %></p>
+            <p class="one-rem-text grey-text pl-3" style="font-size: 12px !important; line-height: 18px !important;"><%= t("software.third_section_left_text_nine") %></p>
           </div>
-          <div class="fxone-fifth-section-right software-fifth-section-right">
-            <h2><%= t("software.third_section_right_title") %></h2>
-            <p class="bold s-medium-text"><%= t("software.third_section_right_sub_title") %></p>
+          <div class="fxone-fifth-section-right software-fifth-section-right" style="padding: 0px 40px;">
+            <h2 style="margin-bottom: 25px;"><%= t("software.third_section_right_title") %></h2>
+            <p class="bold one-rem-text"><%= t("software.third_section_right_sub_title") %></p>
             <ul style="padding-left: 16px;">
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_one") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_two") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_three") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_one") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_two") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_three") %></li>
             </ul>
-            <p class="bold s-medium-text"><%= t("software.third_section_right_title_two") %></p>
+            <p class="bold one-rem-text"><%= t("software.third_section_right_title_two") %></p>
             <ul style="padding-left: 16px;">
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_four") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_five") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_six") %></li>
-              <li class="s-medium-text grey-text" style="line-height: 25px !important"><%= t("software.third_section_right_text_seven") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_four") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_five") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_six") %></li>
+              <li class="one-rem-text grey-text" style="line-height: 25px !important;margin-bottom: 8px;"><%= t("software.third_section_right_text_seven") %></li>
             </ul>
           </div>
       </div>
       <div class="container">
-        <div class="inks-section software-third-section-bottom">
+        <div class="inks-section software-third-section-bottom" style="padding: 130px 0px;">
           <div class="inks-first-section-left software-first-section-left no-padding-mobile">
             <%= cl_image_tag("software-graphic-3_l0wrfp.png", :quality=>"auto", class: "software-graphic about-graphic-two") %>
           </div>
-          <div class="inks-first-section-right d-flex justify-content-center">
+          <div class="inks-first-section-right d-flex justify-content-center" style="padding: 16px 100px 16px 16px;">
             <p class="responsive-text-small"><%= t("software.third_section_final_text") %></p>
           </div>
         </div>
