software page done

--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -220,7 +220,7 @@
         <h2 class="text-center"><%= t("software.fifth_section_title_one") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fifth_section_sub_title") %></p>
         <p class="responsive-text-small text-center mobile-margin-bottom"><%= t("software.fifth_section_text_one") %></p>
-        <h2 class="text-center"><%= t("software.fifth_section_title_two") %></h2>
+        <h2 class="text-center" style="margin-top: 40px;"><%= t("software.fifth_section_title_two") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fifth_section_text_two") %></p>
         <%= cl_image_tag("software-graphic-11_ip0jy4.png", class: "software-middle-graphic") %>
       </div>
