--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -216,7 +216,7 @@
 }
 
 .software-fourth-section-text {
-  padding: 50px 0;
+  padding: 130px 0 50px 0;
   position: relative;
   display: flex;
   flex-direction: column;
